# documents

./: .gitignore  README.md  docker-compose.yml
api/: documents_model.py  documents_router.py  main.py  pyproject.toml  rds_models.py  rds_router.py
strapi/: package-lock.json  package.json
strapi/src/api/doc/content-types/doc/: schema.json
strapi/src/api/doc/controllers/: doc.ts
strapi/src/api/doc/routes/: 01-update-by.ts  doc.ts
strapi/src/api/label/content-types/label/: schema.json
strapi/src/components/identifiers/: identifiers.json
