[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = { extras = ["standard"], version = "0.115.6" }
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
